@@ -1,5 +1,5 @@
 /*
- * $Id: dbf1.c,v 1.145 2005/12/14 03:20:39 guerra000 Exp $
+ * $Id: dbf1.c,v 1.146 2005/12/16 10:18:09 druzus Exp $
  */
 
 /*
@@ -66,9 +66,6 @@
 #include "hbsxfunc.h"
 #include "error.ch"
 #include "rddsys.ch"
-
-// AUTONUMERIC!
-#define HB_DBF_AUTOINC              15    /* 4 byte auto-increment value */
 
 #ifndef HB_CDP_SUPPORT_OFF
 #  include "hbapicdp.h"
@@ -185,8 +182,7 @@ static RDDFUNCS dbfTable = { ( DBENTRYP_BP ) hb_dbfBof,
  * Common functions.
  */
 
-// AUTONUMERIC!
-static void hb_dbfSetBlankRecord( DBFAREAP pArea, BOOL bClearReadOnly )
+static void hb_dbfSetBlankRecord( DBFAREAP pArea )
 {
    BYTE *pPtr = pArea->pRecord, bFill = ' ', bNext;
    ULONG ulSize = 1; /* 1 byte ' ' for DELETE flag */
@@ -210,16 +206,7 @@ static void hb_dbfSetBlankRecord( DBFAREAP pArea, BOOL bClearReadOnly )
          bNext = ' ';
       }
 
-      // AUTONUMERIC!
-      if( pField->uiTypeExtended == HB_DBF_AUTOINC && ! bClearReadOnly )
-      {
-         memset( pPtr, bFill, ulSize );
-         pPtr += ulSize + uiLen;
-         /* In this case do NOT clear field */
-         ulSize = 0;
-         bFill = bNext;
-      }
-      else if( bNext == bFill )
+      if( bNext == bFill )
       {
          ulSize += uiLen;
       }
@@ -969,8 +956,7 @@ static ERRCODE hb_dbfGoTo( DBFAREAP pArea, ULONG ulRecNo )
       pArea->fPositioned = pArea->fDeleted = pArea->fEncrypted = FALSE;
 
       /* Clear record buffer */
-      // AUTONUMERIC!
-      hb_dbfSetBlankRecord( pArea, TRUE );
+      hb_dbfSetBlankRecord( pArea );
    }
    pArea->fFound = FALSE;
 
@@ -1175,65 +1161,8 @@ static ERRCODE hb_dbfAppend( DBFAREAP pArea, BOOL bUnLockAll )
       }
    }
 
-   // AUTONUMERIC!
-   /* Updates autonumeric fields */
-   if( pArea->fAutoInc )
-   {
-      ULONG ulNumber;
-      DBFFIELD pField;
-
-      for( uiCount = 0; uiCount < pArea->uiFieldCount; uiCount++ )
-      {
-         if( pArea->lpFields[ uiCount ].uiTypeExtended == HB_DBF_AUTOINC )
-         {
-            hb_fsSeek( pArea->hDataFile, sizeof( DBFHEADER ) + ( sizeof( DBFFIELD ) * uiCount ), FS_SET );
-            if( hb_fsRead( pArea->hDataFile, ( BYTE * ) &pField, sizeof( DBFFIELD ) ) != sizeof( DBFFIELD ) )
-            {
-               pError = hb_errNew();
-               hb_errPutGenCode( pError, EG_READ );
-               hb_errPutDescription( pError, hb_langDGetErrorDesc( EG_READ ) );
-               hb_errPutSubCode( pError, EDBF_READ );
-               hb_errPutOsCode( pError, hb_fsError() );
-               hb_errPutFlags( pError, EF_CANDEFAULT );
-               hb_errPutFileName( pError, pArea->szDataFileName );
-               SELF_ERROR( ( AREAP ) pArea, pError );
-               hb_itemRelease( pError );
-               return FAILURE;
-            }
-            else
-            {
-               ulNumber = ( HB_LONG ) HB_GET_LE_INT32( &pField.bCounter );
-               if( pField.bStep )
-               {
-                  ulNumber += ( ULONG ) ( unsigned char ) pField.bStep;
-               }
-               else
-               {
-                  ulNumber++;
-               }
-               HB_PUT_LE_UINT32( &pField.bCounter, ulNumber );
-               HB_PUT_LE_UINT32( pArea->pRecord + pArea->pFieldOffset[ uiCount ], ulNumber );
-               hb_fsSeek( pArea->hDataFile, sizeof( DBFHEADER ) + ( sizeof( DBFFIELD ) * uiCount ), FS_SET );
-               if( hb_fsWrite( pArea->hDataFile, ( BYTE * ) &pField, sizeof( DBFFIELD ) ) != sizeof( DBFFIELD ) )
-               {
-                  pError = hb_errNew();
-                  hb_errPutGenCode( pError, EG_WRITE );
-                  hb_errPutDescription( pError, hb_langDGetErrorDesc( EG_WRITE ) );
-                  hb_errPutSubCode( pError, EDBF_WRITE );
-                  hb_errPutOsCode( pError, hb_fsError() );
-                  hb_errPutFlags( pError, EF_CANDEFAULT );
-                  hb_errPutFileName( pError, pArea->szDataFileName );
-                  SELF_ERROR( ( AREAP ) pArea, pError );
-                  hb_itemRelease( pError );
-                  return FAILURE;
-               }
-            }
-         }
-      }
-   }
-
    /* Clear record buffer and update pArea */
-   hb_dbfSetBlankRecord( pArea, FALSE ) ;
+   hb_dbfSetBlankRecord( pArea ) ;
 
    pArea->fValidBuffer = pArea->fUpdateHeader = pArea->fRecordChanged =
    pArea->fAppend = pArea->fPositioned = TRUE;
@@ -1629,35 +1558,7 @@ static ERRCODE hb_dbfPutRec( DBFAREAP pArea, BYTE * pBuffer )
       if( !pArea->fRecordChanged && SELF_GOHOT( ( AREAP ) pArea ) == FAILURE )
          return FAILURE;
 
-      /* Copy data to buffer */
-      // AUTONUMERIC!
-      if( pArea->fAutoInc )
-      {
-         ULONG ulSize = 1; /* 1 byte ' ' for DELETE flag */
-         BYTE *pPtr = pArea->pRecord;
-
-         for( uiCount = 0; uiCount < pArea->uiFieldCount; uiCount++ )
-         {
-            uiLen = pArea->lpFields[ uiCount ].uiLen;
-
-            if( pArea->lpFields[ uiCount ].uiTypeExtended == HB_DBF_AUTOINC )
-            {
-               memcpy( pPtr, pBuffer, ulSize );
-               pPtr    += ulSize + uiLen;
-               pBuffer += ulSize + uiLen;
-               ulSize = 0;
-            }
-            else
-            {
-               ulSize += uiLen;
-            }
-         }
-         memcpy( pPtr, pBuffer, ulSize );
-      }
-      else
-      {
-         memcpy( pArea->pRecord, pBuffer, pArea->uiRecordLen );
-      }
+      memcpy( pArea->pRecord, pBuffer, pArea->uiRecordLen );
 
       /*
        * TODO: such operation should be forbidden
@@ -1748,16 +1649,7 @@ static ERRCODE hb_dbfPutValue( DBFAREAP pArea, USHORT uiIndex, PHB_ITEM pItem )
    uiError = SUCCESS;
    uiIndex--;
    pField = pArea->lpFields + uiIndex;
-   // AUTONUMERIC!
-   if( pField->uiTypeExtended == HB_DBF_AUTOINC && HB_IS_NUMBER( pItem ) )
-   {
-      if( ! hb_itemGetNL( pItem ) == ( HB_LONG ) HB_GET_LE_INT32( pArea->pRecord + pArea->pFieldOffset[ uiIndex ] ) )
-      {
-         // TODO: This is a file readonly error. Must use a "proper" error.
-         uiError = EDBF_READONLY;
-      }
-   }
-   else if( pField->uiType == HB_IT_MEMO )
+   if( pField->uiType == HB_IT_MEMO )
       uiError = EDBF_DATATYPE;
    else
    {
@@ -2331,29 +2223,15 @@ static ERRCODE hb_dbfCreate( DBFAREAP pArea, LPDBOPENINFO pCreateInfo )
             break;
 
          case HB_IT_INTEGER:
-            // AUTONUMERIC
-            if( pField->uiTypeExtended == HB_DBF_AUTOINC )
+            pThisField->bType = 'I';
+            if( ( pField->uiLen > 4 && pField->uiLen != 8 ) ||
+                pField->uiLen == 0 )
             {
-               pArea->fAutoInc = TRUE;
-               pThisField->bType = 'A';
-               pThisField->bLen = 4;
-               pThisField->bDec = 0;
-               // memset( pThisField->bCounter, 0, 4 );
-               pThisField->bStep = 1;
-               pArea->uiRecordLen += pThisField->bLen;
+               pField->uiLen = 4;
             }
-            else
-            {
-               pThisField->bType = 'I';
-               if( ( pField->uiLen > 4 && pField->uiLen != 8 ) ||
-                   pField->uiLen == 0 )
-               {
-                  pField->uiLen = 4;
-               }
-               pThisField->bLen = ( BYTE ) pField->uiLen;
-               pThisField->bDec = 0;
-               pArea->uiRecordLen += pThisField->bLen;
-            }
+            pThisField->bLen = ( BYTE ) pField->uiLen;
+            pThisField->bDec = 0;
+            pArea->uiRecordLen += pThisField->bLen;
             break;
 
          default:
@@ -2591,8 +2469,7 @@ static ERRCODE hb_dbfInfo( DBFAREAP pArea, USHORT uiIndex, PHB_ITEM pItem )
          {
             if( pArea->fAppend )
             {
-               // AUTONUMERIC!
-               hb_dbfSetBlankRecord( pArea, FALSE );
+               hb_dbfSetBlankRecord( pArea );
                pArea->fDeleted = FALSE;
             }
             else
@@ -3125,15 +3002,6 @@ static ERRCODE hb_dbfOpen( DBFAREAP pArea, LPDBOPENINFO pOpenInfo )
          case 'Y':
             pFieldInfo.uiType = HB_IT_DOUBLE;
             pFieldInfo.uiDec = pField->bDec;
-
-         // AUTONUMERIC!
-         case 'A':
-            pFieldInfo.uiType = HB_IT_INTEGER;
-            pFieldInfo.uiTypeExtended = HB_DBF_AUTOINC;
-            pFieldInfo.uiLen = 4;
-            pFieldInfo.uiDec = 0;
-            pArea->fAutoInc = TRUE;
-            break;
 
          default:
             errCode = FAILURE;
