@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4714 2005/12/17 15:10:59 fsgiudice Exp $
+ * $Id: ChangeLog,v 1.4715 2005/12/18 23:05:20 paultucker Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-12-18 19:08 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
+  * source/rdd/dbf1.c
+  * source/rdd/workarea.c
+    - Reverted "A" autoincrement field type. It had some incompatibilities.
 
 2005-12-18 18:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
   * source/rtl/gtwin/gtwin.c
